# fingDB

./: Dockerfile  entrypoint.sh  pyproject.toml  warden.toml
app/: main.py
app/core/: config.py
app/templates/: graph.js
migrations/: primary__0001_initial_schema.sql
