[project]
name = "fingdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "crudadmin>=0.4.3",
    "dbwarden>=0.3.3",
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "fastcrud>=0.21.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.11",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
